# ptlib

./: CMakeLists.txt
cmake/: PTLibConfig.cmake  PTLibOptions.cmake  PTLibUtils.cmake  ptbuildopts.h.cmake
include/ptlib/: dict.h  pstring.h
samples/: CMakeLists.txt
samples/address/: CMakeLists.txt
samples/audio/: CMakeLists.txt
samples/ether/: CMakeLists.txt
samples/hello_world/: CMakeLists.txt
samples/netif/: CMakeLists.txt
src/: CMakeLists.txt
src/ptlib/msos/: directsound.cxx
